--- a/fdf.html
+++ b/fdf.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FDF-Form Hub</title>
     <link rel="stylesheet" href="fdf.css">
-    <link rel="shortcut icon" href="/images/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
 </head>
 
 <header>
